  (Vincent Ladeuil, #322767, #414589)

* ``bzr help`` will no longer trigger the get_missing_command hook when
  doing a topic lookup. This avoids prompting (like 'no command plugins/loom,
  did you mean log?') when getting help. In future we may trigger the hook 
  deliberately when no help topics match from any help index.
  (Robert Collins, #396261)

* ``bzr remove-tree`` can now remove multiple working trees.
  (Jared Hance, Andrew Bennetts, #253137)

* ``bzr resolve --take-this`` and ``--take-other`` now correctly renames
  the kept file on content conflicts where one side deleted the file.
  (Vincent Ladeuil, #529968)

* ``bzr upgrade`` now creates the ``backup.bzr`` directory with the same
  permissions as ``.bzr`` directory on a POSIX OS.
  (Parth Malwankar, #262450)

* ``bzr upgrade`` now names backup directory as ``backup.bzr.~N~`` instead
  of ``backup.bzr``. This directory is ignored by bzr commands such as
  ``add``.
  (Parth Malwankar, #335033, #300001)

* Correctly interpret "451 Rename/move failure: Directory not empty" from
  ftp servers while trying to take a lock.
  (Martin Pool, #528722)

* DirStateRevisionTree.kind() was returning wrong result when 'kind'
  changes occured between the workingtree and one of its parents.
  (Vincent Ladeuil, #533437)

* Fix stub sftp test server to call os.getcwdu().
  (Vincent Ladeuil, #526211, #526353)

* Network transfer amounts and rates are now displayed in SI units according
  to the Ubuntu Units Policy <https://wiki.ubuntu.com/UnitsPolicy>.
  (Gordon Tyler, #514399)

* Support kind markers for socket and fifo filesystem objects. This
  prevents ``bzr status --short`` from crashing when those files are
  present.  (John Arbash Meinel, #303275)

* ``bzr mkdir DIR`` will not create DIR unless DIR's parent is a versioned
   directory. (Parth Malwankar, #138600)

* SSH child processes will now ignore SIGQUIT on nix systems so breaking into
  the debugger won't kill the session.